Sluzba ScoreService implementovana cez REST, pridany REST server.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.hikari.maximumPoolSize=2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#server.port=8081
+remote.server.api=http://localhost:8080/api/
 
