Webove Gamestudio: Staticka uvodna stranka a stranka "O mne". Hra hratelna cez webove rozhranie, generovane pomocou Thymeleaf. Zatial bez normalneho dohratia hry. REST dokumentacia generovana pomocou SpringFox.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #server.port=8081
 remote.server.api=http://localhost:8080/api/
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
